Attempted fix for absolute positioning for background images on ios

--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ h3.primary{
 
     @media only screen and (max-width: 768px) {
         height: 100vh;
+        left: 0;
     }
 }
 
